--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,9 @@ name = "pypi"
 django = "*"
 django-environ = "*"
 django-bootstrap5 = "*"
+gunicorn = "*"
+psycopg2 = "*"
+django-heroku = "*"
 
 [dev-packages]
 
